--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
-*.js linguist-language=php
-*.css linguist-language=php
-*.html linguist-language=php
+*.md linguist-language=php 
+*.yml linguist-language=php 
+*.html linguist-language=php 
+*.js linguist-language=php 
+*.xml linguist-language=php
+*.css linguist-language=php 
+*.sql linguist-language=php
+*.uml linguist-language=php 
+*.cmd linguist-language=php
